# sequence-

./: .gitignore  CMakeLists.txt  main.cpp
deduplication/: ManberSuffixArray.cpp  ManberSuffixArray.h  Suffix.h  SuffixArray.cpp  SuffixArray.h  SuffixSort.h
encoding/: FrequencyTable.cpp  RANSEncoder.cpp  RANSEncoder.h  TANSDecoder.cpp  TANSDecoder.h  TANSEncoder.cpp  TANSEncoder.h
headers/: BitOutputStream.h  FrequencyTable.h  TANSEncoder.h  fileio.h
io/: BitInputStream.cpp  BitInputStream.h  BitOutputStream.cpp  BitOutputStream.h  BufferedFileInputStream.cpp  BufferedFileInputStream.h  FileOutput.cpp  FileOutput.h
source/: BitOutputStream.cpp  ByteBuffer.cpp  FileOutput.cpp  FrequencyTable.cpp  TANSEncoder.cpp  main.cpp
util/: ByteBuffer.cpp  ByteBuffer.h  ReverseBitReader.cpp  ReverseBitReader.h
